--- a/core/assets/styles/index.scss
+++ b/core/assets/styles/index.scss
@@ -13,7 +13,7 @@
 // components
 @import './components/popup';
 @import './components/header';
-@import './components/sidebar';
+@import './components/category';
 @import './components/custom-table';
 @import "./components/media-popup";
 @import "./components/page-builder";
