--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -26,11 +26,11 @@
     <%- include('partials/header'); -%>
 </header>
 
-<div class="site-content">
+<div class="site-content d-flex ai-start ps-relative">
     <aside class="sidebar">
         <%- include('partials/category'); -%>
     </aside>
-    <div class="main-content">
+    <div class="main-content w100">
         <div class="main-content__inner">
             <%- content; %>
         </div>
