style(header): refactor and re-style

--- a/core/assets/styles/components/header.scss
+++ b/core/assets/styles/components/header.scss
@@ -9,7 +9,7 @@
   z-index: 9999;
 
   min-height: var(--header-height);
-  padding: 5px 20px;
+  padding: .5rem 2rem;
 
   display: flex;
   justify-content: space-between;
