--- a/core/assets/styles/index.scss
+++ b/core/assets/styles/index.scss
@@ -19,6 +19,7 @@
 @import "./components/page-builder";
 
 // pages
+@import "./pages/default";
 @import "./pages/posts";
 @import "./pages/posts-detail";
 @import "./pages/media";
