--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -1,6 +1,6 @@
 <div class="admin-panel txt_color_white">
     <div class="admin__panel--left" data-toggle="sidebar">
-        <button class="admin-panel__menu">
+        <button class="admin-panel__menu show-tablet-h">
             <span class="admin-panel__menu-bar"></span>
             <span class="admin-panel__menu-bar"></span>
             <span class="admin-panel__menu-bar"></span>
