--- a/views/admin/partials/category.ejs
+++ b/views/admin/partials/category.ejs
@@ -21,7 +21,7 @@ const accountType = categories.find(c => c.type === 'account');
                 <% if (category.children && category.children.length && isActive) { %>
                     <ul class="category__menu sub-menu">
                         <% category.children.forEach(child => { %>
-                            <% const isActiveSubPage = child.compare ? child.compare(data) : true; %>
+                            <% const isActiveSubPage = child.compare ? child.compare(data) : false; %>
                             <li class="category__menu-item <%= isActiveSubPage ? 'active' : '' %>">
                                 <a href="<%= child.url %>"><%= child.name %></a>
                             </li>
