refactor(user): remove redundant

--- a/core/views/custom-type/user/index.ejs
+++ b/core/views/custom-type/user/index.ejs
@@ -103,8 +103,8 @@ const modifyDate = (publishTime) => {
 
                                 <!-- password -->
                                 <label for="password">Password</label>
-                                <input type="password" value="hidden" id="user-password" readonly>
-                                <button type="button" data-user-generate-password-btn>Generate new password</button>
+                                <input type="password" value="hidden" id="password" readonly>
+                                <!--                                <button type="button" data-user-generate-password-btn>Generate new password</button>-->
 
                             </div>
                         </div>
