--- a/core/views/custom-type/account/index.ejs
+++ b/core/views/custom-type/account/index.ejs
@@ -1,1 +1,37 @@
-<h1>Account page</h1>
+<%
+// modify date publish
+const modifyDate = (publishTime) => {
+    const year = publishTime.getFullYear();
+    const month = (publishTime.getMonth() + 1).toString().padStart(2, '0');
+    const date = publishTime.getDate().toString().padStart(2, '0');
+    const hour = publishTime.getHours().toString().padStart(2, '0');
+    const minute = publishTime.getMinutes().toString().padStart(2, '0');
+    return `${date}/${month}/${year} at ${hour}:${minute}`;
+};
+%>
+
+<div class="users-list__item" data-column-wrapper="item" data-id="<%= data._id %>" data-user-item>
+    <div class="users__item--user not-show-user" data-column="User" data-user-item-name>
+        <%= data.name; %></div>
+
+    <div class="users__item--register not-show-title" data-column="Register At">
+        <time><%= modifyDate(data.registerAt); %></time>
+    </div>
+
+    <div class="users__item--email"
+         data-column="Email" data-user-item-email><%= data.email; %></div>
+
+    <div class="users__item--role"
+         data-column="Role" data-user-item-role><%= data.role; %></div>
+
+    <div class="users__item--state"
+         data-column="State" data-user-item-state><%= data.state; %></div>
+
+    <div class="users__item--action" data-column="Action">
+
+        <button class="users__item--link" data-toggle="user-popup" data-user-detail>Edit
+        </button>
+        <a href="?post_type=<%= contentType; %>&method=post&action=delete&id=<%= data._id; %>">Trash</a>
+    </div>
+
+</div>
