--- a/views/register/type/sign-up.ejs
+++ b/views/register/type/sign-up.ejs
@@ -9,19 +9,19 @@
     <!-- email -->
     <div>
         <label for="email">Email:</label>
-        <input id="email" type="email" name="email" placeholder="Email">
+        <input id="email" type="email" name="email" placeholder="Email" required>
     </div>
 
     <!-- password -->
     <div>
         <label for="password">Password:</label>
-        <input id="password" type="password" name="password" placeholder="Password">
+        <input id="password" type="password" name="password" placeholder="Password" required>
     </div>
 
     <!-- Confirm password -->
     <div>
         <label for="confirm-password">Confirm:</label>
-        <input id="confirm-password" type="password" name="confirmPassword" placeholder="Confirm">
+        <input id="confirm-password" type="password" name="confirmPassword" placeholder="Confirm" required>
     </div>
 
     <!-- Submit -->
